--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ description = "MQT Predictor - A MQT tool for Determining Good Quantum Circuit C
 readme = "README.md"
 authors = [
     { name = "Nils Quetschlich", email = "nils.quetschlich@tum.de" },
-    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de"},
+    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de" },
 ]
-keywords = ["MQT",  "quantum computing", "compilation", "machine learning", "prediction"]
+keywords = ["MQT", "quantum computing", "compilation", "machine learning", "prediction"]
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
 dynamic = ["version"]
@@ -31,8 +31,8 @@ dependencies = [
     "numpy>=1.26; python_version >= '3.12'",
     "numpy>=1.24; python_version >= '3.11'",
     "numpy>=1.22",
-    "numpy<2; sys_platform == 'darwin' and 'x86_64' in platform_machine",  # Restrict numpy v2 for macOS x86 since it is not supported anymore since torch v2.3.0
-    "typing-extensions>=4.1",  # for `assert_never`
+    "numpy<2; sys_platform == 'darwin' and 'x86_64' in platform_machine", # Restrict numpy v2 for macOS x86 since it is not supported anymore since torch v2.3.0
+    "typing-extensions>=4.1", # for `assert_never`
 ]
 
 classifiers = [
@@ -169,49 +169,49 @@ preview = true
 unsafe-fixes = true
 [tool.ruff.lint]
 extend-select = [
-    "A",           # flake8-builtins
-    "ANN",         # flake8-annotations
-    "ARG",         # flake8-unused-arguments
-    "ASYNC",       # flake8-async
-    "B",  "B904",  # flake8-bugbear
-    "C4",          # flake8-comprehensions
-    "D",           # pydocstyle
-    "EM",          # flake8-errmsg
-    "EXE",         # flake8-executable
-    "FA",          # flake8-future-annotations
-    "FLY",         # flynt
-    "FURB",        # refurb
-    "I",           # isort
-    "ICN",         # flake8-import-conventions
-    "ISC",         # flake8-implicit-str-concat
-    "LOG",         # flake8-logging-format
-    "N",           # flake8-naming
-    "NPY",         # numpy
-    "PERF",        # perflint
-    "PGH",         # pygrep-hooks
-    "PIE",         # flake8-pie
-    "PL",          # pylint
-    "PT",          # flake8-pytest-style
-    "PTH",         # flake8-use-pathlib
-    "PYI",         # flake8-pyi
-    "Q",           # flake8-quotes
-    "RET",         # flake8-return
-    "RSE",         # flake8-raise
-    "RUF",         # Ruff-specific
-    "SLF",         # flake8-self
-    "SLOT",        # flake8-slots
-    "SIM",         # flake8-simplify
-    "TC",         # flake8-type-checking
-    "TID",         # flake8-tidy-imports
-    "TRY",         # tryceratops
-    "UP",          # pyupgrade
-    "YTT",         # flake8-2020
+    "A", # flake8-builtins
+    "ANN", # flake8-annotations
+    "ARG", # flake8-unused-arguments
+    "ASYNC", # flake8-async
+    "B", "B904", # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "D", # pydocstyle
+    "EM", # flake8-errmsg
+    "EXE", # flake8-executable
+    "FA", # flake8-future-annotations
+    "FLY", # flynt
+    "FURB", # refurb
+    "I", # isort
+    "ICN", # flake8-import-conventions
+    "ISC", # flake8-implicit-str-concat
+    "LOG", # flake8-logging-format
+    "N", # flake8-naming
+    "NPY", # numpy
+    "PERF", # perflint
+    "PGH", # pygrep-hooks
+    "PIE", # flake8-pie
+    "PL", # pylint
+    "PT", # flake8-pytest-style
+    "PTH", # flake8-use-pathlib
+    "PYI", # flake8-pyi
+    "Q", # flake8-quotes
+    "RET", # flake8-return
+    "RSE", # flake8-raise
+    "RUF", # Ruff-specific
+    "SLF", # flake8-self
+    "SLOT", # flake8-slots
+    "SIM", # flake8-simplify
+    "TC", # flake8-type-checking
+    "TID", # flake8-tidy-imports
+    "TRY", # tryceratops
+    "UP", # pyupgrade
+    "YTT", # flake8-2020
 ]
 ignore = [
-    "ISC001",  # Conflicts with formatter
-    "E501",    # Line too long (Black is enough)
-    "PLR",     # Design related pylint codes
-    "S101",    # Use of assert detected
+    "ISC001", # Conflicts with formatter
+    "E501", # Line too long (Black is enough)
+    "PLR", # Design related pylint codes
+    "S101", # Use of assert detected
 ]
 flake8-unused-arguments.ignore-variadic-names = true
 isort.required-imports = ["from __future__ import annotations"]
@@ -219,7 +219,7 @@ isort.required-imports = ["from __future__ import annotations"]
 [tool.ruff.lint.per-file-ignores]
 "*.pyi" = ["D"]  # pydocstyle
 "*.ipynb" = [
-    "D",    # pydocstyle
+    "D", # pydocstyle
     "E402", # Allow imports to appear anywhere in Jupyter notebooks
     "I002", # Allow missing `from __future__ import annotations` import
 ]
@@ -230,9 +230,9 @@ convention = "google"
 
 [tool.typos]
 default.extend-ignore-re = [
-  '"id": ".*",',
-  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",  # ignore line
-  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on" # ignore block
+    '"id": ".*",',
+    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$", # ignore line
+    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on" # ignore block
 ]
 [tool.typos.default.extend-words]
 wille = "wille"
@@ -242,3 +242,6 @@ fom = "fom"
 
 [tool.repo-review]
 ignore = ["GH200"]
+
+[tool.setuptools]
+package-dir = { "" = "src" }
